--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -4,7 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+actix-cors = "0.7.0"
 actix-web = "4.9.0"
 dotenv = "0.15.0"
 reqwest = "0.12.12"
+serde = { version = "1.0.217", features = ["derive"]}
+serde_json = "1.0.136"
 tokio = "1.43.0"
