--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -8,6 +8,7 @@ actix-cors = "0.7.0"
 actix-web = "4.9.0"
 dotenv = "0.15.0"
 reqwest = "0.12.12"
-serde = { version = "1.0.217", features = ["derive"]}
-serde_json = "1.0.136"
+serde = { version = "1.0.217", features = ["derive"] }
+serde_json = "1.0.138"
 tokio = "1.43.0"
+diesel = { version = "2.2.6", features = ["postgres", "test-transaction"] }
