--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -11,4 +11,5 @@ reqwest = "0.12.12"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.138"
 tokio = "1.43.0"
-diesel = { version = "2.2.6", features = ["postgres", "test-transaction"] }
+diesel = { version = "2.2.6", features = ["postgres"] }
+uuid = { version = "1.12.1", features = ["v4"]}
